@@ -93,8 +93,8 @@ abstracts = {
   # reason for something is printed (part, quit, kick, ..)
   reason = "{comment $0-}";
 
-  # mode change is printed ([+o nick])
-  mode = "{comment $0-}";
+  # mode change is printed
+  mode = "[$0-]";
 
   ##
   ## channel specific messages
@@ -113,6 +113,27 @@ abstracts = {
 
   # ban/ban exception/invite list mask is printed
   ban = "$0-";
+
+  ##
+  ## Action (/ME command)
+  ##
+
+  # Generic action
+  action = "%Y* $0-";
+
+  # Own sent action
+  ownaction = "%c* $0-";
+
+  ##
+  ## Notice (/NOTICE command)
+  ##
+
+  # Generic notice
+  notice = "%C- $0-";
+
+  # Own sent notice
+  ownnotice = "%g- $0";
+
 
   ##
   ## messages
@@ -169,40 +190,10 @@ abstracts = {
   # private message in query
   privmsgnick = "{msgnick  $0-%n}";
 
-  ##
-  ## Actions (/ME stuff)
-  ##
-
-  # used internally by this theme
-  action_core = "%Y* $0-";
-
-  # generic one that's used by most actions
-  action = "{action_core $0-} ";
-
-  # own action, both private/public
-  ownaction = "{action $0-}";
-
-  # own action with target, both private/public
-  ownaction_target = "{action_core $0}{msgchannel $1} ";
-
-  # private action sent by others
-  pvtaction = " (*) $0- ";
-  pvtaction_query = "{action $0-}";
-
-  # public action sent by others
-  pubaction = "{action $0-}";
-
 
   ##
   ## other IRC events
   ##
-
-  # notices
-  ownnotice = "-%c$1-%n- ";
-  notice = "-%C$0-%n- ";
-  pubnotice_channel = "{msgchannel $0}";
-  pvtnotice_host = "";
-  servernotice = "{notice $0-}";
 
   # CTCPs
   ownctcp = "[$0$1-] ";
@@ -218,8 +209,8 @@ abstracts = {
   netjoin = "%C$0-%n";
 
   # /names list
-  names_nick = "%n%_$0%_$1- | ";
-  names_users = "($0-)";
+  names_nick = "[ %n%_$0%_$1- ] ";
+  names_users = "$0-";
   names_channel = "{channel $0-}";
 
   # DCC
