@@ -28,6 +28,20 @@ enum {
   SILCTXT_CHANNEL_FOUNDER_YOU,
   SILCTXT_CHANNEL_FOUNDER,
   SILCTXT_CHANNEL_TOPIC,
+  SILCTXT_CHANNEL_CMODE,
+  SILCTXT_CHANNEL_CUMODE,
+  SILCTXT_CHANNEL_ACTION,
+  SILCTXT_CHANNEL_NOTICE,
+  SILCTXT_CHANNEL_OWNACTION,
+  SILCTXT_CHANNEL_OWNNOTICE,
+
+  SILCTXT_FILL_2,
+
+  SILCTXT_WHOIS_USERINFO,
+  SILCTXT_WHOIS_CHANNELS,
+  SILCTXT_WHOIS_MODES,
+  SILCTXT_WHOIS_IDLE,
+  SILCTXT_WHOWAS_USERINFO,
 };
 
 extern FORMAT_REC fecommon_silc_formats[];
